# ball_prediction

./: README.md  pyproject.toml  requirements.txt  setup.cfg
ball_prediction/: ekf.py  initial_state_estimator.py  prediction_filter.py  spin_estimator.py  trajectory_ekf.py  trajectory_prediction.py
ball_prediction/contact_models/: PINN.py  hyperparameter_tuning.py  magnus_regressor.py  model_learning.py  racket_contact_model.py  spin_estimator.py  table_contact_model.py  utils.py
ball_prediction/models/: ball_simulation.py  hyperparameter_tuning.py  magnus_regressor.py  model_learning.py  racket_kinematics.py  racket_rebound_model.py  rebound_detection.py  spin_estimator.py  table_contact_model.py  table_rebound_model.py  utils.py
ball_prediction/utils/: data_filter.py  data_import.py  data_management.py
config/: config.toml
data/: mn5008_backspin.hdf5  mn5008_no_spin.hdf5  mn5008_topspin.hdf5
examples/: dataset_selector.py  filtering_vis.py  generate_data_set.py  magnus_regressor.py  magnus_regressor_vis.py  run_prediction.py  spin_estimation_vis.py  tennicam_emulator.py  visualize_forward_kinematics.py  visualize_prediction.py  visualize_prediction_error.py  visualize_rebound_models.py  visualize_rebounds.py
examples/data/: simple_ball_trajectories.hdf5
notebooks/: data_analysis.ipynb  data_preprocessing.ipynb  kinematics.ipynb  magnus_regression.ipynb  rebound_model_eval.ipynb  table_rebound_model_eval.ipynb  training.ipynb  visualisation.ipynb
scripts/: run_trajectory_prediction.py  simulation.py  tennicam_emulator.py  utils.py
