[metadata]
name = ball_prediction
version = 0.1
author = Alexander Dittrich
author_email = alexander.dittrich@tuebingen.mpg.de
url = https://github.com/intelligent-soft-robots/ball_prediction
description = file: README.md
keywords = reinforcementlearning, tabletennis, robotics, spin
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True